--- a/package.json
+++ b/package.json
@@ -14,9 +14,6 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@types/express-pino-logger": "^4.0.2",
-    "@types/react-dom": "^16.9.8",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -32,14 +29,14 @@
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
+    "prettier": "^2.0.5",
     "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
+    "@types/express-pino-logger": "^4.0.2",
     "@types/helmet": "^0.0.48",
-    "@types/material-ui": "^0.21.7",
     "@types/node": "^14.0.26",
     "@types/pino": "^6.3.0",
-    "@types/react": "^16.9.43",
     "@types/webpack": "^4.41.21",
     "@types/webpack-dev-server": "^3.11.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
@@ -50,7 +47,6 @@
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.4",
     "html-webpack-plugin": "^4.3.0",
     "nodemon": "^2.0.4",
     "pino-pretty": "^4.1.0",
