--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "lint-staged": "^10.2.11",
     "pino": "^6.4.1",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "throttle-debounce": "^2.3.0"
   },
   "devDependencies": {
-    "prettier": "^2.0.5",
     "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
@@ -33,12 +33,13 @@
     "@types/helmet": "^0.0.48",
     "@types/node": "^14.0.26",
     "@types/pino": "^6.3.0",
+    "@types/socket.io": "^2.1.10",
+    "@types/socket.io-client": "^1.4.33",
+    "@types/throttle-debounce": "^2.1.0",
     "@types/webpack": "^4.41.21",
     "@types/webpack-dev-server": "^3.11.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
-    "@types/socket.io": "^2.1.10",
-    "@types/socket.io-client": "^1.4.33",
     "copy-webpack-plugin": "^6.0.3",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
@@ -46,6 +47,7 @@
     "html-webpack-plugin": "^4.3.0",
     "nodemon": "^2.0.4",
     "pino-pretty": "^4.1.0",
+    "prettier": "^2.0.5",
     "ts-loader": "^8.0.1",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.56",
