Gets linking of constants working nicely

--- a/server.tsconfig.json
+++ b/server.tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": "./dist/server"
+    "outDir": "./dist"
   },
   "ts-node": {
     "files": true
