--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.formatOnSave": true,
   "typescript.preferences.importModuleSpecifier": "relative",
+  "search.followSymlinks": false,
   "files.associations": {
     "tsconfig.json": "jsonc",
     "tsconfig.server.json": "jsonc"
