--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http": "^0.0.1-security",
     "lint-staged": "^10.2.11",
     "pino": "^6.4.1",
+    "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "throttle-debounce": "^2.3.0"
@@ -34,6 +35,7 @@
     "@types/helmet": "^0.0.48",
     "@types/node": "^14.0.26",
     "@types/pino": "^6.3.0",
+    "@types/shortid": "^0.0.29",
     "@types/socket.io": "^2.1.10",
     "@types/socket.io-client": "^1.4.33",
     "@types/throttle-debounce": "^2.1.0",
